CHANGE LOG of KeyTalk
=================================================================

client-5.5.2, in development
----------------------


server-5.5.2, 13 March 2019
----------------------
Support upgrades from v5.2.1 and higher
Supports RCDP 2.3.0, 2.2.0, 2.1.0 and 2.0.0
Support import of settings created in v5.2.0-v5.5.2, v4.6.0 and v4.6.2
    - ADDED: Added DevID CN to be used for matching CN of client cert for self-service logins and as CN attribute in generated certs (KEYTALK-514)
    - ADDED: Allow querying public IP address of KeyTalk server
    - ADDED: Disallow service operators from mass-enrolling and mass-revoking/removing user certificates

    CHANGED shared Db schema:
      - version 8.0-> 9.0


client-5.5.1, 26 February 2019
----------------------
    - ADDED: Allow non-root users to customize and use KeyTalk Linux client (KEYTALK-409)
    - FIXED: Error importing RCCD file by Windows client


server-5.5.1, 22 February 2019
----------------------
Support upgrades from v5.2.1 and higher
Supports RCDP 2.3.0, 2.2.0, 2.1.0 and 2.0.0
Support import of settings created in v5.2.0-v5.5.1, v4.6.0 and v4.6.2
    - ADDED: Allow ordering GlobalSign Personal Sign 1 (PS1) certificates (KEYTALK-507)
    - ADDED: Allow for alternative validation CA for client-certificate logins to KeyTalk (KEYTALK-511)
    - CHANGED: Move the template messages per service to the NOTIFICATION tab (KEYTALK-508)
    - CHANGED: Move SMS  & SMTP tab from System to Notifications (KEYTALK-510)
    - CHANGED: Disallow self-service logins as well as enrolling S/MIME certificates for 3rd party S/MIME certificate recipient services

    CHANGED shared Db schema:
      - version 7.0-> 8.0


server-5.5.0, 18 January 2019
----------------------
Support upgrades from v5.2.1 and higher
Supports RCDP 2.3.0, 2.2.0, 2.1.0 and 2.0.0
Support import of settings created in v5.2.0-v5.5.0, v4.6.0 and v4.6.2