@@ -10,7 +10,7 @@
 		<state type="state" directory="d:\builds\state"/>
 
 		<triggers>
-		<scheduleTrigger time="02:00" buildCondition="ForceBuild" />
+		<scheduleTrigger time="02:15" buildCondition="ForceBuild" />
 		</triggers>
 
 		<sourcecontrol type="git">
